updating composer json mistakes

--- a/composer.json
+++ b/composer.json
@@ -5,7 +5,7 @@
     "authors": [
         {
             "name": "Neil Aldred",
-            "email": "neil@cyber-duck.co.uk <Neil Aldred>",
+            "email": "neil@cyber-duck.co.uk",
             "homepage": "https://www.cyber-duck.co.uk/"
         }
     ],
