--- a/composer.json
+++ b/composer.json
@@ -13,12 +13,12 @@
     "keywords": ["Laravel", "laravel-search"],
     "require": {
         "elasticsearch/elasticsearch": "^7.8",
-        "illuminate/support": "~5|~6|~7"
+        "illuminate/support": "~5|~6|~7|~8"
     },
     "require-dev": {
-        "phpunit/phpunit": "^8.0",
-        "mockery/mockery": "^1.1",
-        "orchestra/testbench": "~3|~4|~5",
+        "phpunit/phpunit": "^9.3",
+        "mockery/mockery": "^1.3.1",
+        "orchestra/testbench": "~3|~4|~5|~6",
         "sempro/phpunit-pretty-print": "^1.0"
     },
     "autoload": {
