--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,8 @@
     "keywords": ["Laravel", "laravel-search"],
     "require": {
         "elasticsearch/elasticsearch": "^7.8",
-        "illuminate/support": "~5|~6|~7|~8"
+        "illuminate/support": "~5|~6|~7|~8",
+        "laravel/helpers": "^1.4"
     },
     "require-dev": {
         "phpunit/phpunit": "^9.3",
